10-applications/fullstack-app/k8s/laravel/manifests/laravel-deployment.yaml
# Deployment Laravel INSI-M2 Production
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-insi-m2
  namespace: default
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      imagePullSecrets:
      - name: gitlab-registry-secret
      containers:
      - name: laravel
        image: registry.gitlab.com/projet_insi/app-testcluster/laravelapp:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
