10-applications/fullstack-app/k8s/laravel/manifests/laravel-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: insi-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.insim2.local
    secretName: insi-tls
  rules:
  - host: api.insim2.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: laravel-service
            port:
              number: 8080
